tests/int/list_command/snapshots/integration__int__list_command__bin_only__should_list_bin_only_table_format.snap
---
source: tests/int/list_command/bin_only.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/bin_only
    - list
    - "--format"
    - table
---
success: true
exit_code: 0
----- stdout -----
+---------------+
| Module        |
+===============+
| config        |
|---------------|
| main          |
|---------------|
| utils         |
|---------------|
| utils::helper |
+---------------+

----- stderr -----
