tests/int/list_command/snapshots/integration__int__list_command__bin_only__should_list_bin_only_with_source.snap
---
source: tests/int/list_command/bin_only.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/bin_only
    - list
    - "-s"
---
success: true
exit_code: 0
----- stdout -----
config         src/config.rs
main           src/main.rs
utils          src/utils/mod.rs
utils::helper  src/utils/helper.rs

----- stderr -----
